# GMR_custom

./: .gitignore  README.md  demo.bvh
assets/pal_talos/: talos.xml
cpp/: CMakeLists.txt  README.md
cpp/examples/: retarget_viewer_config.yaml
cpp/include/gmr/retarget/: repo_paths.h  retargeter.h
cpp/src/: main_retarget_batch_cli.cpp  main_retarget_cli.cpp  main_retarget_viewer.cpp
cpp/src/retarget/: retargeter.cpp  retargeter_pinocchio.cpp
general_motion_retargeting/utils/: smpl.py
scripts/: bvh_to_retargeting_frame.py  bvh_to_retargeting_frame.sh  bvh_to_robot.py  gvhmr_to_robot.py  human_json_to_robot.py  smplx_to_robot.py  smplx_to_robot_dataset.py
